# pmo-as-code-pipeline

./: .gitignore  NOTICE  README.md  STATUS.md  consistency.yaml  projects.yaml  pyproject.toml
.github/workflows/: actionlint.yml  audit.yml  quality.yml  status-pages.yml
criteria/: benefits-realization.criteria.yaml  business-case.criteria.yaml  charter.criteria.yaml  data-migration-plan.criteria.yaml  hypercare-plan.criteria.yaml  release-cutover-plan.criteria.yaml  runbook.criteria.yaml  status-report.criteria.yaml  user-story.criteria.yaml
docassert/: __init__.py  cli.py  config.py  consistency.py  graph.py  models.py  profiles.py  projects.py  report.py  rtm.py  semantic.py  status.py  structural.py
docassert/_data/: consistency.yaml
documents/PRJ-001-AUR/: adr.md  benefits-realization.md  brd.md  business-case.md  charter.md  data-migration-plan.md  frnfr.md  hypercare-plan.md  post-implementation-review.md  prd.md  project.md  qa-test-plan.md  raci.md  release-cutover-plan.md  risk-register.md  rollback-plan.md  runbook.md  test-cases.md  user-stories.md
documents/PRJ-002-ATL/: brd.md  charter.md  prd.md  project.md  test-cases.md
documents/PRJ-003-MER/: charter.md  project.md
documents/PRJ-004-PHX/: charter.md  project.md
documents/adrs/: onboarding.md
documents/benefits-realizations/: onboarding.md
documents/brds/: onboarding.md
documents/business-cases/: onboarding.md
documents/charters/: atlas.md  aurora.md  meridian.md  project-phoenix.md  weak-example.md
documents/data-migration-plans/: onboarding.md
documents/frnfr/: onboarding.md
documents/hypercare-plans/: onboarding.md
documents/post-implementation-reviews/: onboarding.md
documents/prds/: onboarding.md
documents/qa-test-plans/: onboarding.md
documents/raci/: onboarding.md
documents/release-plans/: onboarding.md
documents/risk-registers/: onboarding.md
documents/rollback-plans/: onboarding.md
docunit/: __init__.py  cli.py  consistency.py  graph.py  loader.py  models.py  profiles.py  projects.py  report.py  rtm.py  semantic.py  status.py  structural.py
examples/: README.md
schema/: adr.schema.json  benefits-realization.schema.json  brd.schema.json  business-case.schema.json  charter.schema.json  data-migration-plan.schema.json  frnfr.schema.json  hypercare-plan.schema.json  post-implementation-review.schema.json  prd.schema.json  project.schema.json  qa-test-plan.schema.json  raci-stakeholder.schema.json  release-cutover-plan.schema.json  risk-register.schema.json  rollback-plan.schema.json  runbook.schema.json  status-report.schema.json  test-cases.schema.json  user-story.schema.json
templates/: business-case.template.md  charter.template.md  frnfr.template.md  qa-test-plan.template.md  risk-register.template.md  user-story.template.md
tests/: test_config.py  test_consistency.py  test_graph.py  test_kinds_delivery.py  test_kinds_governance.py  test_kinds_operate.py  test_kinds_reporting.py  test_profiles.py  test_projects.py  test_status.py  test_structural.py
tools/: extract.py
(+31 files in other folders)
