[project]
name = "docassert"
version = "0.1.0"
description = "Unit testing for business documents — validate structured Markdown docs against a configurable audit standard."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-frontmatter>=1.1",
    "PyYAML>=6.0",
    "jsonschema>=4.0",
]

[project.optional-dependencies]
ai = ["anthropic>=0.40"]
convert = ["python-docx>=1.1", "pypdf>=4.0"]   # source extraction for doc-to-pmo
dev = ["pytest>=8.0"]

[project.scripts]
docassert = "docassert.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["docassert"]

[tool.pytest.ini_options]
# Import docassert from the repo root without relying on an editable install
# (avoids editable-install quirks on newer Python versions).
pythonpath = ["."]
testpaths = ["tests"]
